--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,12 +29,24 @@ const work = await Promise.all(
 );
 
 ---
+![Astro Sphere Lighthouse Score](/astro-sphere.jpg)
+
+![Astro Nano](/astro-nano.png)
+
+---
+
+
 
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="animate font-semibold text-black dark:text-white">
-      Hi, I'm Nano <span class="text-xl">👋🏻</span> 
+      Hi, I'm ddNano <span class="text-xl">👋🏻</span> 
+
+      
+
     </h4>
+
+    
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
@@ -62,6 +74,7 @@ const work = await Promise.all(
           </p>
         </article>
       </section>
+
 
       <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
